[gd_scene load_steps=6 format=3 uid="uid://bvr38mg6p1ja5"]

[ext_resource type="Script" path="res://assets/scenes/gameplay/healthbar.gd" id="1_mqfbo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3rcub"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4jlnf"]
bg_color = Color(0.796078, 0.478431, 0.101961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvfj7"]
bg_color = Color(0.0253638, 0.0253638, 0.0253638, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fndi"]
bg_color = Color(0.796078, 0.188235, 0.101961, 1)

[node name="Healthbar" type="ProgressBar"]
z_index = 1
offset_right = 240.0
offset_bottom = 4.0
theme_override_styles/background = SubResource("StyleBoxEmpty_3rcub")
theme_override_styles/fill = SubResource("StyleBoxFlat_4jlnf")
value = 60.0
show_percentage = false
script = ExtResource("1_mqfbo")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_uvfj7")
theme_override_styles/fill = SubResource("StyleBoxFlat_8fndi")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
